# SecuScan

./: .gitignore  .vercelignore  README.md  SecuScan.docx  app.py  config.json  logrotate.conf  pyproject.toml  requirements.txt  security_report_20250310_212839.json  secuscan.service  start_secuscan.bat  vercel.json
api/: index.py
scanner/: main.py
scanner/analyzers/: base.py  buffer_overflow.py  rce.py  sql_injection.py  stack_overflow.py  xss.py
scanner/automation/: api.py  auto_start.py  email_monitor.py  install_service.py  start_services.py  test_email_connection.py  test_email_connection_detailed.py  test_system.py  troubleshoot_gmail.py  windows_service.py
scanner/core/: scanner.py
scanner/report/: generator.py
scanner/utils/: logger.py
scanner/web/: __init__.py  app.py
scanner/web/static/css/: style.css
scanner/web/static/js/: main.js
scanner/web/templates/: index.html
scripts/: populate_data.py
secure_puma/: app.py
secure_puma/templates/: home.html  products.html
vulnerable_puma/: app.py  subscribers.txt
vulnerable_puma/templates/: home.html  products.html
