[project]
name = "secuscan"
version = "1.0.0"
description = "Web Application Security Scanner with ML"
requires-python = ">=3.7"
dependencies = [
    "flask>=2.0.0",
    "flask-cors>=4.0.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "selenium>=4.1.0",
    "fpdf2>=2.5.0",
    "psutil>=5.9.0",
    "cryptography>=41.0.0",
    "matplotlib>=3.5.0",
    "scikit-learn>=1.0.0",
    "numpy>=1.21.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

